TASK: replace DataSourcesController
